--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 }
 
 ext {
+    retrofit_version = "2.4.0"
     supportlib_version = "27.1.1"
     glide_version = "4.7.1"
 }
@@ -31,6 +32,12 @@ dependencies {
     // Kotlin
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
+    // Retrofit, Json Lib
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+
+
     // Support Lib
     implementation "com.android.support:appcompat-v7:$supportlib_version"
     implementation "com.android.support:cardview-v7:$supportlib_version"
@@ -38,11 +45,15 @@ dependencies {
     implementation "com.android.support:support-annotations:$supportlib_version"
     implementation "com.android.support.constraint:constraint-layout:1.1.0"
 
+    // RxJava2
+    implementation "io.reactivex.rxjava2:rxjava:2.2.1"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+
     // Room
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 
-    // RxJava2
+    // Room - RxJava2 Support
     implementation "android.arch.persistence.room:rxjava2:1.0.0"
 
     // Glide
