--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,15 +32,15 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Kotlin
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Retrofit, Json Lib
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
 
-
     // Support Lib
+    implementation "com.android.support:design:$supportlib_version"
     implementation "com.android.support:appcompat-v7:$supportlib_version"
     implementation "com.android.support:cardview-v7:$supportlib_version"
     implementation "com.android.support:recyclerview-v7:$supportlib_version"
