--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
-        applicationId "blankthings.autfit"
+        applicationId "blankthings.raincheck"
         minSdkVersion 19
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -23,7 +23,7 @@ android {
 
 ext {
     retrofit_version = "2.4.0"
-    supportlib_version = "27.1.1"
+    supportlib_version = "28.0.0"
     glide_version = "4.7.1"
     room_version = "1.1.1"
 }
