--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,11 +13,19 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    def keyProperties = new Properties()
+    keyProperties.load(new FileInputStream(rootProject.file("key.properties")))
+    
+    buildTypes.each {
+        it.buildConfigField 'String', 'OWM_API', keyProperties['WEATHER_API']
     }
 }
 
